exercise-4.9/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: the-project
spec:
  replicas: REPLICA_COUNT
  selector:
    matchLabels:
      app: the-project
  template:
    metadata:
      labels:
        app: the-project
    spec:
      containers:
      - name: frontend
        image: PROJECT/IMAGE
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
