exercise-4.9/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: the-project
spec:
  selector:
    app: the-project
  ports:
  - port: 80
    targetPort: 3000
