exercise-4.9/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: the-project
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: HOST_NAME
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: the-project
            port:
              number: 80
